--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
 script:
   - npm run test
 after_success:
+  - npm run test:coverage:report
   - npm run semantic-release
 branches:
   except:
